--- a/manifest.yml
+++ b/manifest.yml
@@ -4,3 +4,5 @@ applications:
   - buildpack:
     - python_builpack
     - https://github.com/cloudfoundry/nginx-buildpack.git
+    health-check-type: http
+    health-check-http-endpoint: /nginx_status
