--- a/nginx.conf
+++ b/nginx.conf
@@ -12,15 +12,49 @@ http {
   keepalive_timeout 65;
   server_tokens off;
 
-  server {
-    set_real_ip_from 0.0.0.0/0 ;
-    real_ip_recursive on ;
-    real_ip_header x-forwarded-for ;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+  resolver <%=
+    lines = Array.new
+    File.open('/etc/resolv.conf').each { |line|
+      lines << line.split(" ") if line.start_with?("nameserver")
+    }
+    nameserver = lines.dig(0,1) if lines.length > 0
+    nameserver || "127.0.0.1"
+  %>;
 
-    listen {{port}} default_server;
+  server {
+    set_real_ip_from 0.0.0.0/0;
+    real_ip_recursive on;
+    real_ip_header x-forwarded-for;
+
     server_name _;
+    listen <%= ENV["PORT"] %> default_server;
+
+    location / {
+      proxy_pass $http_x_cf_forwarded_url;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+      add_header X-Cache-Status $upstream_cache_status;
+
+      <%
+        whitelist = ENV['IP_WHITELIST'] || '127.0.0.1'
+        whitelist.split(',').each do |line|%>
+      allow <%= line %>;<% end %>
+
+      <%
+        whitelist = ENV['IP_BLACKLIST'] || 'all'
+        whitelist.split(',').each do |line|%>
+      deny <%= line %>;<% end %>
+    }
+
+    location /nginx_status {
+      stub_status on;
+      access_log off;
+      allow all;
+      allow 10.0.0.0/8;
+      allow 172.16.0.0/12;
+      allow 192.168.0.0/16;
+      deny all;
+    }
   }
 }
