optimize nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
-worker_processes  2;
+worker_processes 4;
+daemon off;
 
 events {
   worker_connections  1024;
@@ -8,8 +9,12 @@ error_log /dev/stderr;
 
 http {
   access_log /dev/stdout;
+  default_type application/octet-stream;
+  include mime.types;
   sendfile on;
-  keepalive_timeout 65;
+  tcp_nopush on;
+  port_in_redirect off;
+  keepalive_timeout 30;
   server_tokens off;
 
   resolver <%=
@@ -22,9 +27,12 @@ http {
   %>;
 
   server {
-    set_real_ip_from 0.0.0.0/0;
+    set_real_ip_from 10.0.0.0/8;
+    set_real_ip_from 172.16.0.0/12;
+    set_real_ip_from 192.168.0.0/16;
+    set_real_ip_from 127.0.0.1/32;
     real_ip_recursive on;
-    real_ip_header x-forwarded-for;
+    real_ip_header X-Forwarded-For;
 
     server_name _;
     listen <%= ENV["PORT"] %> default_server;
@@ -36,8 +44,9 @@ http {
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       add_header X-Cache-Status $upstream_cache_status;
 
+      satisfy any;
       <%
-        whitelist = ENV['IP_WHITELIST'] || '127.0.0.1'
+        whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
         whitelist.split(',').each do |line|%>
       allow <%= line %>;<% end %>
 
