--- a/nginx.conf
+++ b/nginx.conf
@@ -59,6 +59,7 @@ http {
     location /nginx_status {
       stub_status on;
       access_log off;
+      satisfy any;
       allow 10.0.0.0/8;
       allow 172.16.0.0/12;
       allow 192.168.0.0/16;
