--- a/nginx.conf
+++ b/nginx.conf
@@ -51,8 +51,8 @@ http {
       allow <%= line %>;<% end %>
 
       <%
-        whitelist = ENV['IP_BLACKLIST'] || 'all'
-        whitelist.split(',').each do |line|%>
+        blacklist = ENV['IP_BLACKLIST'] || 'all'
+        blacklist.split(',').each do |line|%>
       deny <%= line %>;<% end %>
     }
 
