--- a/nginx.conf
+++ b/nginx.conf
@@ -47,13 +47,17 @@ http {
       satisfy any;
       <%
         whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
-        whitelist.split(',').each do |line|%>
-      allow <%= line %>;<% end %>
+        whitelist.split(',').each do |line|
+      %>
+      allow <%= line %>;
+      <% end %>
 
       <%
         blacklist = ENV['IP_BLACKLIST'] || 'all'
-        blacklist.split(',').each do |line|%>
-      deny <%= line %>;<% end %>
+        blacklist.split(',').each do |line|
+      %>
+      deny <%= line %>;
+      <% end %>
     }
 
     location /nginx_status {
