--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,6 @@
 ---
 
 applications:
-  - health-check-type: http
+  - buildpack: staticfile_buildpack
+    health-check-type: http
     health-check-http-endpoint: /nginx_status
