--- a/nginx.conf
+++ b/nginx.conf
@@ -39,12 +39,9 @@ http {
 
     location / {
       proxy_pass $http_x_cf_forwarded_url;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+      proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-      add_header X-Cache-Status $upstream_cache_status;
 
-      satisfy any;
       <%
         whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
         whitelist.split(',').each do |line|
@@ -63,7 +60,6 @@ http {
     location /nginx_status {
       stub_status on;
       access_log off;
-      satisfy any;
       allow 10.0.0.0/8;
       allow 172.16.0.0/12;
       allow 192.168.0.0/16;
