--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,19 @@ http {
     set_real_ip_from 172.16.0.0/12;
     set_real_ip_from 192.168.0.0/16;
     set_real_ip_from 127.0.0.1/32;
+
+    #CDN IP ranges
+    <%
+      require 'net/http'
+      require 'json'
+      ip_all = JSON.parse(Net::HTTP.get(URI('https://ip-ranges.amazonaws.com/ip-ranges.json')))
+      cdn = Array.new
+      ip_all['prefixes'].each { |it| cdn += [it['ip_prefix']] if it['service'] == 'CLOUDFRONT' }
+      ip_all['ipv6_prefixes'].each { |it| cdn += [it['ipv6_prefix']] if it['service'] == 'CLOUDFRONT' }
+      cdn.each do |line|
+    %>
+    set_real_ip_from <%= line %>;<% end %>
+
     real_ip_recursive on;
     real_ip_header X-Forwarded-For;
 
@@ -46,15 +59,13 @@ http {
         whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
         whitelist.split(',').each do |line|
       %>
-      allow <%= line %>;
-      <% end %>
+      allow <%= line %>;<% end %>
 
       <%
         blacklist = ENV['IP_BLACKLIST'] || 'all'
         blacklist.split(',').each do |line|
       %>
-      deny <%= line %>;
-      <% end %>
+      deny <%= line %>;<% end %>
     }
 
     location /nginx_status {
