check CDN share secret

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,11 @@ http {
     nameserver || "127.0.0.1"
   %>;
 
+  map $http_x_cdn_secret $invalid_secret {
+    default 1;
+    "<%= ENV['CDN_SECRET'] %>" 0;
+  }
+
   server {
     set_real_ip_from 10.0.0.0/8;
     set_real_ip_from 172.16.0.0/12;
@@ -51,10 +56,6 @@ http {
     listen <%= ENV["PORT"] %> default_server;
 
     location / {
-      proxy_pass $http_x_cf_forwarded_url;
-      proxy_set_header X-Forwarded-For $remote_addr;
-      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-
       <%
         whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
         whitelist.split(',').each do |line|
@@ -66,6 +67,14 @@ http {
         blacklist.split(',').each do |line|
       %>
       deny <%= line %>;<% end %>
+
+      if ($invalid_secret) {
+        return 403;
+      }
+
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+      proxy_pass $http_x_cf_forwarded_url;
     }
 
     location /nginx_status {
