--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,7 @@ http {
 
     real_ip_recursive on;
     real_ip_header X-Forwarded-For;
+    expires -1;
 
     server_name _;
     listen <%= ENV["PORT"] %> default_server;
