--- a/nginx.conf
+++ b/nginx.conf
@@ -32,25 +32,9 @@ http {
   }
 
   server {
-    set_real_ip_from 10.0.0.0/8;
-    set_real_ip_from 172.16.0.0/12;
-    set_real_ip_from 192.168.0.0/16;
-    set_real_ip_from 127.0.0.1/32;
-
-    #CDN IP ranges
-    <%
-      require 'net/http'
-      require 'json'
-      ip_all = JSON.parse(Net::HTTP.get(URI('https://ip-ranges.amazonaws.com/ip-ranges.json')))
-      cdn = Array.new
-      ip_all['prefixes'].each { |it| cdn += [it['ip_prefix']] if it['service'] == 'CLOUDFRONT' }
-      ip_all['ipv6_prefixes'].each { |it| cdn += [it['ipv6_prefix']] if it['service'] == 'CLOUDFRONT' }
-      cdn.each do |line|
-    %>
-    set_real_ip_from <%= line %>;<% end %>
-
+    set_real_ip_from 0.0.0.0/0;
     real_ip_recursive on;
-    real_ip_header X-Forwarded-For;
+    real_ip_header X-CF-Real-IP;
     expires -1;
 
     server_name _;
