--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
   server {
     set_real_ip_from 0.0.0.0/0;
     real_ip_recursive on;
-    real_ip_header X-CF-Real-IP;
+    real_ip_header X-CDN-Real-IP;
     expires -1;
 
     server_name _;
