--- a/nginx.conf
+++ b/nginx.conf
@@ -26,40 +26,49 @@ http {
     nameserver || "127.0.0.1"
   %>;
 
+  set_real_ip_from 0.0.0.0/0;
+  real_ip_recursive on;
+  real_ip_header X-CDN-Real-IP;
+  expires -1;
+
   map $http_x_cdn_secret $invalid_secret {
     default 1;
     "<%= ENV['CDN_SECRET'] %>" 0;
   }
 
-  server {
-    set_real_ip_from 0.0.0.0/0;
-    real_ip_recursive on;
-    real_ip_header X-CDN-Real-IP;
-    expires -1;
+  map $remote_addr $whitelist {
+    default 0;
+    <%
+      whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
+      whitelist.split(',').each do |line|
+    %>
+    "<%= line %>" 1;<% end %>
+  }
 
+  server {
     server_name _;
     listen <%= ENV["PORT"] %> default_server;
 
     location / {
-      <%
-        whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
-        whitelist.split(',').each do |line|
-      %>
-      allow <%= line %>;<% end %>
-
-      <%
-        blacklist = ENV['IP_BLACKLIST'] || 'all'
-        blacklist.split(',').each do |line|
-      %>
-      deny <%= line %>;<% end %>
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
 
       if ($invalid_secret) {
         return 403;
+        break;
       }
 
-      proxy_set_header X-Forwarded-For $remote_addr;
-      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-      proxy_pass $http_x_cf_forwarded_url;
+      if ($cookie_ip_restrict_signature) {
+        proxy_pass $http_x_cf_forwarded_url;
+        break;
+      }
+
+      if ($whitelist) {
+        proxy_pass $http_x_cf_forwarded_url;
+        break;
+      }
+
+      return 403;
     }
 
     location /nginx_status {
