--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,7 @@ http {
     set_real_ip_from 192.168.0.0/16;
     set_real_ip_from 172.16.0.0/12;
     set_real_ip_from 10.0.0.0/8;
+    real_ip_header X-Forwarded-For;
     real_ip_recursive on;
     expires -1;
 
