--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,7 @@ http {
     nameserver || "127.0.0.1"
   %>;
 
+  map_hash_bucket_size 128;
   map $http_x_cdn_secret $invalid_secret {
     default 1;
     "<%= ENV['CDN_SECRET'] %>" 0;
