--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,7 @@ http {
     listen <%= ENV["PORT"] %> default_server;
 
     location / {
+      allow 127.0.0.1/32;
       <%
         whitelist = ENV['IP_WHITELIST'] || '127.0.0.1/32'
         whitelist.split(',').each do |line|
