--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,8 @@ http {
     "<%= ENV['CDN_SECRET'] %>" 0;
   }
 
+  real_ip_header X-Forwarded-For;
+  real_ip_recursive on;
   set_real_ip_from 127.0.0.1/32;
   set_real_ip_from 192.168.0.0/16;
   set_real_ip_from 172.16.0.0/12;
