--- a/nginx.conf
+++ b/nginx.conf
@@ -76,6 +76,8 @@ http {
 
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+      proxy_set_header X-CF-Proxy-Signature $http_x_cf_proxy_signature;
+      proxy_set_header X-CF-Proxy-Metadata $http_x_cf_proxy_metadata;
       proxy_pass $http_x_cf_forwarded_url;
     }
 
