--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,13 @@ events {
 error_log /dev/stderr;
 
 http {
-  access_log /dev/stdout;
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+            '$status $body_bytes_sent "$http_referer" '
+            '"$http_user_agent" "$http_x_forwarded_for" '
+            'X-Cf-Forwarded-Url:"$http_x_cf_forwarded_url" "$http_host" '
+            '"$request_uri" proxy_host:"$proxy_host"';
+  access_log /dev/stdout main;
+
   default_type application/octet-stream;
   include mime.types;
   sendfile on;
