--- a/nginx.conf
+++ b/nginx.conf
@@ -84,7 +84,7 @@ http {
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_set_header X-CF-Proxy-Signature $http_x_cf_proxy_signature;
       proxy_set_header X-CF-Proxy-Metadata $http_x_cf_proxy_metadata;
-      proxy_pass $http_x_cf_forwarded_url;
+      proxy_pass https://anything.london.cloudapps.digital$request_uri;
     }
 
     location /nginx_status {
