Set correct host header for upstream router (for TR caseworker)

--- a/nginx.conf
+++ b/nginx.conf
@@ -84,6 +84,7 @@ http {
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_set_header X-CF-Proxy-Signature $http_x_cf_proxy_signature;
       proxy_set_header X-CF-Proxy-Metadata $http_x_cf_proxy_metadata;
+      proxy_set_header Host caseworker.traderemedies-uat.uktrade.io;
 
       rewrite ^.*$ $http_x_cf_forwarded_url;
       rewrite ^https:\/\/[^\/]+(.*) $1 break;
