Rewrite URL to include both correct domain and URL

--- a/nginx.conf
+++ b/nginx.conf
@@ -84,7 +84,10 @@ http {
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_set_header X-CF-Proxy-Signature $http_x_cf_proxy_signature;
       proxy_set_header X-CF-Proxy-Metadata $http_x_cf_proxy_metadata;
-      proxy_pass https://anything.london.cloudapps.digital$request_uri;
+
+      rewrite ^.*$ $http_x_cf_forwarded_url;
+      rewrite ^https:\/\/[^\/]+(.*) $1 break;
+      proxy_pass https://anything.london.cloudapps.digital$uri;
     }
 
     location /nginx_status {
