--- a/nginx.conf
+++ b/nginx.conf
@@ -74,6 +74,8 @@ http {
         return 403;
       }
 
+      proxy_ssl_server_name on;
+      proxy_ssl_protocols TLSv1.2;
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_pass $http_x_cf_forwarded_url;
