--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ error_log /dev/stderr;
 http {
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
             '$status $body_bytes_sent "$http_referer" '
-            '"$http_user_agent" "$http_x_forwarded_for" '
+            '"$http_user_agent" x-forwarded-for:"$http_x_forwarded_for" '
             'X-Cf-Forwarded-Url:"$http_x_cf_forwarded_url" "$http_host" '
             '"$request_uri" proxy_host:"$proxy_host"';
   access_log /dev/stdout main;
@@ -82,7 +82,8 @@ http {
 
       proxy_ssl_server_name on;
       proxy_ssl_protocols TLSv1.2;
-      proxy_set_header X-Forwarded-For $remote_addr;
+      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      # proxy_set_header X-Forwarded-For $http_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_pass $http_x_cf_forwarded_url;
     }
