Never route back to CloudFront and append to X-Forwarded-For

--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,14 @@ http {
 
   expires -1;
 
+  # Extract the original Host header from X-Cf-Forwarded-Url
+  # We can't use the incoming Host header, because that's the
+  # domain of the router itself
+  map $http_x_cf_forwarded_url $cf_forwarded_host {
+    volatile;
+    "~^https:\/\/([^\/]+).*" "$1";
+  }
+
   server {
     server_name _;
     listen <%= ENV["PORT"] %> default_server;
@@ -76,9 +84,20 @@ http {
 
       proxy_ssl_server_name on;
       proxy_ssl_protocols TLSv1.2;
-      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-      proxy_pass $http_x_cf_forwarded_url;
+      proxy_set_header Host $cf_forwarded_host;
+
+      # Extract the path from X-Cf-Forwarded-Url
+      # We can't use the path of the incoming requests, since
+      # they are all "/"
+      rewrite ^.*$ $http_x_cf_forwarded_url;
+      rewrite ^https:\/\/[^\/]+(.*) $1 break;
+
+      # We proxy to the CloudFoundry router, and not back to the
+      # host specified in X-Cf-Forwarded-Url, because that could
+      # be the CDN that the request has already been through
+      proxy_pass https://<%= ENV['UPSTREAM_DOMAIN'] %>$uri;
     }
 
     location /nginx_status {
