Ensure that the secret is valid is tested on each request

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,7 @@ http {
 
   map_hash_bucket_size 128;
   map $http_x_cdn_secret $invalid_secret {
+    volatile; 
     default 1;
     "<%= ENV['CDN_SECRET'] %>" 0;
   }
