--- a/nginx.conf
+++ b/nginx.conf
@@ -74,11 +74,18 @@ http {
         return 403;
       }
 
+      set $cf_forwarded_host '*';
+      set $cf_forwarded_uri '*';
+      if ($http_x_cf_forwarded_url ~* ^(https?\:\/\/)(.*?)\/(.*)$) {
+        set $cf_forwarded_host $2;
+        set $cf_forwarded_uri /$3;
+      }
+
       proxy_ssl_server_name on;
       proxy_ssl_protocols TLSv1.2;
-      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header Host $cf_forwarded_host;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-      proxy_pass $http_x_cf_forwarded_url;
+      proxy_pass $http_x_forwarded_proto://$http_host$cf_forwarded_uri;
     }
 
     location /nginx_status {
