--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,8 @@ http {
   port_in_redirect off;
   keepalive_timeout 30;
   server_tokens off;
+  client_max_body_size 128m;
+  client_body_timeout 120s;
 
   resolver <%=
     lines = Array.new
