--- a/nginx.conf
+++ b/nginx.conf
@@ -84,8 +84,10 @@ http {
         set $cf_forwarded_uri /$3;
       }
 
+      proxy_http_version 1.1;
       proxy_ssl_server_name on;
       proxy_ssl_protocols TLSv1.2;
+      proxy_set_header Connection "";
       proxy_set_header Host $cf_forwarded_host;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_pass $http_x_forwarded_proto://$http_host$cf_forwarded_uri;
