--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,8 @@ http {
       %>
       deny <%= line %>;<% end %>
 
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
       proxy_pass $http_x_cf_forwarded_url;
